# agentic-image-generation

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  langflow_agent.py  pyproject.toml  requirements.txt
.agents/skills/langflow/: SKILL.md
.github/workflows/: ci.yml  marketing-site-ci.yml
agents/: genagent.py  genagent_core.py  langgraph_agent.py  multi_agent.py
api/: main.py
docs/: benchmarks.md
marketing-site/: README.md  index.html
marketing-site/src/: App.css  App.jsx
src/image_agent/: __init__.py  api.py
src/image_agent/config/: env.py
src/image_agent/observability/: logger.py  metrics.py
src/image_agent/processors/: metadata_processor.py  sharp_processor.py
src/image_agent/queue/: jobs.py
src/image_agent/storage/: local.py
src/image_agent/utils/: costs.py  hmac_signer.py  validators.py
tests/load/: k6-upload.js
tests/unit/: test_processing_api.py
tools/: comfy_client.py  image_tools.py  workflows.py
ui/: app.py
